Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-3121

Cluster management inconsistency when using persistent store.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.9
    • 0.9
    • C++ Clustering
    • None

    Description

      If cluster_tests.py, test_management is modified to enable durable messages, it fails the log comparison test shows messages like this on one broker but not the others:

      trace Changed V1 statistics org.apache.qpid.broker:connection:127.0.0.1:52742-127.0.0.1:44104 len=NN
      trace Changed V2 statistics org.apache.qpid.broker:connection:127.0.0.1:52742-127.0.0.1:44104

      To date this hasn't been seen to actually cause a cluster crash but in principle it is possible it could.

      To reproduce, build the message store at: http://anonsvn.jboss.org/repos/rhmessaging/store/
      In the tests/cluster directory, run this in a loop:

      make check TESTS=run_python_cluster_tests CLUSTER_TESTS='.test_management -DDURATION=2'

      It will fail, usually on the first iteration, showing the log files that don't match. Use diff or other such tool to confirm that the mismatched lines are as above. The file may also contain some other mismatches showing a different number of stats in a periodic update - that is a consequence of the above.

      Attachments

        1. durable-test-mgmt.patch
          10 kB
          Alan Conway

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: